[package]
name = "fileserve"
version = "0.2.0"
authors = ["MorrowM <themorrowm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fileserve"
path = "src/main.rs"

[dependencies]
httparse = "1.3.4"
threadpool = "1.8.1"
clap = {version = "4.0.11", features = ["derive"]}
mime_guess = "2.0.4"
mime = "0.3.16"